# YouTuberBilBiliHelper

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  50x.html  AGENTS.md  API_FRAMEWORK_ANALYSIS.md  COMPLETION_REPORT.md  CONTRIBUTING.md  Claude.md  Dockerfile  Dockerfile.fast  FINAL_PROJECT_STATUS.md  FINAL_RECOMMENDATIONS.md  GO_IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_REPORT.md  MANAGE_GUIDE.md  MIGRATION_STRATEGY.md  Makefile  NEXT_STEPS.md  OPTIMIZATION_COMPLETE.md  ORBSTACK_DEPLOYMENT.md  PROJECT_IMPROVEMENTS_SUMMARY.md  PROJECT_REVIEW.md  PROJECT_STATUS.md  PROJECT_STRUCTURE.md  PYTHON_UPDATE.md  QUICKSTART.md  README.ja.md  README.md  README.zh-CN.md  README.zh-HK.md  README_IMPROVEMENTS.md  RESTRUCTURE_COMPLETE.md  RESTRUCTURE_SUMMARY.md  START_HERE.md  TROUBLESHOOTING.md  ULTIMATE_PROJECT_SUMMARY.md  UV_MIGRATION.md  app-2024-05-10.log.1  (+24 more)
.claude/: settings.local.json
.github/workflows/: ci.yml  docker.yml  go-ci.yml  python-ci.yml
.kiro/hooks/: code-quality-analyzer.kiro.hook
.kiro/specs/api-security-enhancements/: design.md  (+2 more)
.kiro/steering/: product.md  structure.md  tech.md
app/: __init__.py  config.py  exceptions.py  main.py  middleware.py  models.py
app/routes/: auth.py  content_processing.py  media_management.py  simple.py  streaming.py  streaming_v3.py  videos.py  videos_v3.py  vrchat.py
app/services/: redis_service.py  robust_streaming_service.py  storage_service.py  streaming_service.py  video_service.py
app/utils/: __init__.py  cache.py  decorators.py  exception_handlers.py  responses.py  validators.py
config/cookies/: instagram_cookies_template.txt
data/: dump-2024-05-10T172448-0003.dfs  dump-2024-05-10T172448-0004.dfs  dump-2025-09-09T12:44:53-0000.dfs  dump-2025-09-09T12:44:53-0001.dfs  dump-2025-09-09T12:44:53-0002.dfs  dump-2025-09-09T12:44:53-0003.dfs  dump-2025-09-09T12:44:53-0004.dfs  dump-2025-09-09T12:44:53-0005.dfs  dump-2025-09-09T12:44:53-0006.dfs  dump-2025-09-09T12:44:53-0007.dfs  dump-2025-09-09T12:44:53-0008.dfs  dump-2025-09-09T12:44:53-0009.dfs  dump-2025-09-09T12:44:53-summary.dfs
docker/nginx/: nginx.conf
docker/prometheus/: prometheus.yml
docs/: ARCHITECTURE.md  CHANGELOG.md  DOCKER_IMPROVEMENTS_SUMMARY.md  ENHANCEMENT_IMPLEMENTATION.md  GETTING_STARTED.md  GO_MIGRATION_GUIDE.md  GO_MIGRATION_SUCCESS.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  IMPROVEMENTS_IMPLEMENTED.md  IMPROVEMENT_ANALYSIS.md  IMPROVEMENT_PLAN.md  PROJECT_CLEANUP_SUMMARY.md  QUICKSTART.md  README.md  ROADMAP.md  SIMPLIFIED_PLAN.md  STREAMING_EXAMPLES.md  swagger.yaml
docs/architecture/: IMPROVEMENT_PLAN.md
docs/history/: FINAL_SUMMARY.md  IMPROVEMENTS_SUMMARY.md
examples/: README.md  benchmark_current_api.py  benchmark_demo.py  demo_authentication.py  demo_final.py  demo_streaming.py  demo_user_friendly.py  fastapi_performance_optimizations.py  go_gin_comparison.go  test_api_improvements.py  test_bilibili_concurrent.py  test_bilibili_title_fix.py  test_platforms.py  test_simple_api.py  test_streaming.py  test_streaming_error_handling.py  test_unity_compatibility.py  test_vrchat_compatibility.py  test_vrchat_routes.py  test_vrchat_simple.py
go-api/: .air.toml  .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  go.mod  go.sum  main.go
go-api/docs/: docs.go  swagger.json  swagger.yaml
internal/api/: errors.go  errors_test.go  handlers.go  integration_test.go  ipaccess.go  ipaccess_test.go  middleware.go  routes.go  sanitization.go  sanitization_test.go  security_headers_test.go  size_limits_test.go  validation.go  validation_test.go
internal/config/: config.go  config_test.go
internal/models/: models.go
internal/services/: audit.go  audit_test.go  redis.go  redis_test.go  streaming.go  system.go  video.go
scripts/: compare_apis.sh  deploy.sh  health-check.sh  optimize_fastapi.py  performance_comparison.py  quick-deploy.sh  seed_data.py  server-win.py  setup-dev.sh  setup-production.sh
src/youtuberbilbilihelper/: __init__.py
tests/: README.md  conftest.py  quick_test.py  test_config.py  test_exceptions.py  test_services.py  test_simple_api.py
tests/integration/: test_api.py  test_api_example.py  test_api_structure.py  test_concurrent_downloads.py  test_enterprise_api.py  test_multilang_documentation.py  test_unicode_filenames.py
tests/unit/: test_example.py
(+38 files in other folders)
